<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CropActivity"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/cropImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hue"
        android:layout_below="@id/cropImage"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"/>

    <SeekBar
        android:id="@+id/xStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cropImage"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sat"
        android:layout_below="@id/xStart"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"/>

    <SeekBar
        android:id="@+id/yStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/xStart"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lum"
        android:layout_below="@id/yStart"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"/>

    <SeekBar
        android:id="@+id/xVal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yStart"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lum"
        android:layout_below="@id/xVal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"/>

    <SeekBar
        android:id="@+id/yVal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/xVal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/yVal"
        android:layout_centerHorizontal="true"
        android:text="@string/save"
        android:layout_marginTop="30dp"
        android:onClick="btnSave"/>
</RelativeLayout>